# VT

./: How.to.use.txt  download.Hulu.bat  download.Netflix.bat  install.poetry.bat  pyproject.toml
example_configs/: vinetrimmer.toml
packaging/: pyinstaller.py
scripts/: ParseClientID.py  ParsePSSH.py
scripts/ClientIDGen/: ClientIDGen.py
scripts/WVD/: MakeWVD.py
vinetrimmer/: constants.py  vinetrimmer.py
vinetrimmer/commands/: __init__.py  cfg.py  dl.py  prv.py
vinetrimmer/config/: __init__.py  vinetrimmer.toml
vinetrimmer/config/services/: All4.toml  AppleTVPlus.toml  BBCiPlayer.toml  CTV.toml  DiscoveryPlus.toml  DisneyPlus.toml  Hulu.toml  Netflix.toml  Peacock.toml
vinetrimmer/devices/generic_4464_l3/: device_client_id_blob  device_private_key
vinetrimmer/objects/: titles.py  tracks.py  vaults.py
vinetrimmer/services/: BaseService.py  __init__.py  all4.py  amazon.py  appletvplus.py  bbciplayer.py  braviacore.py  crave.py  ctv.py  discoveryplus.py  disneynow.py  disneyplus.py  filmio.py  flixole.py  googleplay.py  hbomax.py  hotstar.py  hulu.py  itunes.py  netflix.py  paramountplus.py  peacock.py  rakutentv.py  rtlmost.py  showtime.py  spectrum.py  stan.py  tvnow.py  videoland.py  vudu.py
vinetrimmer/utils/: AtomicSQL.py  Logger.py  __init__.py  adobepass.py  click.py  io.py  pyhulu.py  regex.py
vinetrimmer/utils/MSL/: __init__.py
vinetrimmer/utils/widevine/: device.py  session.py
